--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "drag-test",
+  "name": "cir-drager",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "lib/cir-drager.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name cir-drager --dest lib ./src/package/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
